# vote-nullifier-pir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: deploy.yml  host-sync.yml  loadtest.yml  publish-snapshot.yml  release.yml  restart.yml  start-pir-installer-smoke.yml  test.yml
docs/: ci-setup.md  deploy-setup.md  nullifier-query-server.service  params.md  pir-batch-bench.md  pir-tree-spec.md
docs/baselines/: backup-k1-single.json  backup-k5-batched-pre-phase11-fleet.json  backup-k5-batched-v0.0.24.json  backup-k5-batched-v0.0.25.json  backup-k5-batched-v0.0.26-parallel-k5-fra1-do.json  backup-k5-batched-v0.0.26-parallel-k5.json  backup-k5-batched-v0.0.27.json  backup-k5-parallel.json  backup-k5-sequential.json  backup-k5-single-tls.json  do-batch-test-baseline-20260427T035401Z-k5-batched.json  do-batch-test-baseline-20260427T035401Z-k5-parallel.json  do-batch-test-baseline-20260427T035401Z-load-batched-k5-c8.json  do-batch-test-baseline-20260427T035401Z-load-single-c8.json  do-batch-test-kwide-20260427T042223Z-k5-batched.json  do-batch-test-kwide-20260427T042223Z-k5-parallel.json  do-batch-test-kwide-20260427T042223Z-load-batched-k5-c8.json  do-batch-test-kwide-20260427T042223Z-load-single-c8.json  do-batch-test-live-20260427T124212Z-load-batched-k5-c8.json  do-batch-test-v0023-20260427T125632Z-load-single-c8.json  fra-client-8vcpu-c1-kwide-20260427T135821Z-load-batched-k5-c1.json  fra-client-8vcpu-c1-v0023-20260427T135300Z-load-single-c1.json  fra-client-8vcpu-instr-isolated-norayon-batched-20260427T150206Z-load-batched-k5-c8.json  fra-client-8vcpu-instr-norayon-batched-20260427T145311Z-load-batched-k5-c8.json  fra-client-8vcpu-instr-rayon-single-20260427T144631Z-load-single-c8.json  fra-client-8vcpu-kwide-20260427T133237Z-load-batched-k5-c8.json  fra-client-8vcpu-norayon-kwide-20260427T142029Z-load-batched-k5-c8.json  fra-client-8vcpu-v0023-20260427T132651Z-load-single-c8.json  fra-client-kwide-20260427T131348Z-load-batched-k5-c8.json  fra-client-v0023-20260427T130834Z-load-single-c8.json  primary-k1-single.json  primary-k5-batched-v0.0.24.json  primary-k5-batched-v0.0.25.json  primary-k5-batched-v0.0.26-parallel-k5-fra1-do.json  primary-k5-batched-v0.0.26-parallel-k5.json  primary-k5-batched-v0.0.27.json  primary-k5-parallel.json  primary-k5-sequential.json  primary-k5-single-tls.json
docs/plans/: why_not_5_ones_in_one_query_1f6ecc48.plan.md
docs/runbooks/: ci-setup.md  do-batch-rollout.md  load-test-pir.md  restart-pir-fleet.md  server-setup.md
imt-tree/: Cargo.toml  README.md
imt-tree/benches/: tree_build.rs
imt-tree/src/: hasher.rs  lib.rs  proof.rs  test_helpers.rs  tree.rs
imt-tree/src/tree/: mod.rs  nullifier_tree.rs  tests.rs
imt-tree/tests/: imt_circuit_integration.rs
nf-ingest/: Cargo.toml
nf-ingest/src/: config.rs  file_store.rs  lib.rs  sync_nullifiers.rs
nf-server/: Cargo.toml
nf-server/src/: admin_client.rs  admin_listen.rs  bootstrap.rs  cmd_doctor.rs  cmd_export.rs  cmd_ingest.rs  cmd_precompute_cache.rs  cmd_serve.rs  cmd_snapshot.rs  cmd_sync.rs  main.rs  metrics.rs  pir_env.rs  sync_pipeline.rs  voting_config.rs
nf-server/src/serve/: handlers.rs  mod.rs  rebuild.rs  state.rs  watchdog.rs
nf-server/tests/: admin_listener.rs  bootstrap_e2e.rs
nullifier-service/: Cargo.toml
nullifier-service/src/: file_store.rs  lib.rs  sync_nullifiers.rs  test_helpers.rs
pir-test/src/: main.rs
pir/client/: Cargo.toml  README.md
pir/client/src/: lib.rs
pir/export/: Cargo.toml
pir/export/src/: lib.rs  main.rs  tier0.rs  tier1.rs  tier2.rs  tree_checkpoint.rs
pir/export/tests/: round_trip.rs
pir/server/: Cargo.toml
pir/server/src/: lib.rs  main.rs  precompute_cache.rs
pir/test/: Cargo.toml
pir/test/src/: bench_server.rs  load.rs  main.rs
pir/types/: Cargo.toml  README.md
pir/types/src/: fp_utils.rs  lib.rs  tier0.rs  tier1.rs  tier2.rs
scripts/: ci_smoke_start_pir.sh  ci_smoke_start_pir_inner.sh  pir-fleet-migrate-env-defaults.sh  pir-fleet-verify.sh  start_pir.sh.template
service/: Cargo.toml
service/src/: sync_nullifiers.rs
service/tests/: api_integration.rs
terraform/: cloudflare.tf  digitalocean.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
