[workspace]
resolver = "2"
members = [
    "imt-tree",
    "nf-server",
    "pir/client",
    "pir/export",
    "pir/server",
    "pir/test",
    "pir/types",
    "nf-ingest",
]

[patch.crates-io]
valar-spiral-rs = { git = "https://github.com/valargroup/spiral-rs", rev = "3a5132f" }
valar-ypir = { git = "https://github.com/valargroup/ypir", rev = "e47e6d1" }

[profile.release]
lto = "fat"
codegen-units = 1
