[package]
name = "imt-tree"
version = "0.1.0"
edition = "2021"
description = "Indexed Merkle Tree for nullifier non-membership proofs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/vote-nullifier-pir"

[dependencies]
anyhow = "1.0"
ff = "0.13"
hex = "0.4"
pasta_curves = "0.5"
halo2_gadgets = { version = "0.3", default-features = false }
rayon = "1"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "tree_build"
harness = false
