[package]
name = "nf-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
serve = ["dep:pir-server", "dep:axum", "dep:tower-http", "dep:sentry", "dep:tower", "dep:sha2", "dep:prometheus"]
avx512 = ["serve", "pir-server/avx512"]
# Parallelise the YPIR dot-product kernel across cores via rayon.
# Orthogonal to avx512: both are additive and typically enabled together
# on the release fleet (see .github/workflows/release.yml).
rayon = ["serve", "pir-server/rayon"]

[dependencies]
# Serve-only (YPIR PIR server)
pir-server         = { path = "../pir/server", optional = true }
axum               = { version = "0.7", optional = true }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tower-http         = { version = "0.5", features = ["cors"], optional = true }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sentry             = { version = "0.35", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tower-axum-matched-path"], optional = true }
tower              = { version = "0.4", optional = true }
# Snapshot bootstrap: hashing tier files against the published manifest.
sha2               = { version = "0.10", optional = true }
# /metrics endpoint and counters/gauges for the bootstrap pipeline.
prometheus         = { version = "0.13", default-features = false, features = ["process"], optional = true }

# Always needed
pir-export        = { path = "../pir/export" }
nf-ingest = { path = "../nf-ingest" }
imt-tree          = "0.1"
tokio             = { version = "1", features = ["rt-multi-thread", "macros"] }
clap              = { version = "4", features = ["derive", "env"] }
anyhow            = "1.0"
hex               = "0.4"
ff                = "0.13"
pasta_curves      = "0.5"
rayon             = "1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
hex = "0.4"
sha2 = "0.10"
