[package]
name = "pir-client"
version = "0.1.0"
edition = "2021"
description = "Private Information Retrieval client for Zcash nullifier non-membership proofs. Fetches circuit-ready Merkle authentication paths without revealing the queried nullifier to the server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/vote-nullifier-pir"
readme = "README.md"

[dev-dependencies]
rand = "0.8"
pir-export = { path = "../export" }
wiremock = "0.6"

[dependencies]
pir-types  = { path = "../types", version = "0.1.0", features = ["reader"] }
imt-tree = "0.1"
ypir = { version = "0.1.3", package = "valar-ypir", default-features = false }
hex = "0.4"
anyhow = "1.0"
ff = "0.13"
pasta_curves = "0.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
futures = "0.3"
log = "0.4"
