[package]
name = "pir-export"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = "0.8"
tempfile = "3"

[features]
default = []
cli = ["dep:nf-ingest"]

[dependencies]
pir-types = { path = "../types", features = ["reader"] }
imt-tree = "0.1"
nf-ingest = { path = "../../nf-ingest", optional = true }
anyhow = "1.0"
hex = "0.4"
ff = "0.13"
pasta_curves = "0.5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"

[[bin]]
name = "pir-export"
required-features = ["cli"]
