[package]
name = "pir-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pir-export = { path = "../export" }
pir-client = { path = "../client" }
pir-server = { path = "../server" }
pir-types  = { path = "../types" }
nf-ingest = { path = "../../nf-ingest" }
ypir = { git = "https://github.com/valargroup/ypir.git", branch = "valar/artifact", package = "valar-ypir", default-features = false, features = ["server"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
ff = "0.13"
pasta_curves = "0.5"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
