[package]
name = "pir-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pir-export = { path = "../export" }
pir-client = { path = "../client" }
pir-server = { path = "../server" }
pir-types  = { path = "../types" }
nf-ingest = { path = "../../nf-ingest" }
ypir = { version = "0.1.3", package = "valar-ypir", default-features = false, features = ["server"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
ff = "0.13"
pasta_curves = "0.5"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
hdrhistogram = "7"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
log = "0.4"
env_logger = "0.11"
