[package]
name = "pir-types"
version = "0.1.0"
edition = "2021"
description = "Shared wire types and tier-layout constants for the vote-nullifier-pir subsystem (YPIR-based non-membership proofs over a 51M-entry Zcash nullifier set)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/valargroup/vote-nullifier-pir"
readme = "README.md"

[features]
default = []
reader = ["dep:pasta_curves", "dep:ff", "dep:anyhow", "dep:imt-tree"]

[dependencies]
serde = { version = "1", features = ["derive"] }
pasta_curves = { version = "0.5", optional = true }
ff = { version = "0.13", optional = true }
anyhow = { version = "1.0", optional = true }
imt-tree = { version = "0.1", optional = true }
